hphp/hack/test/typecheck/inout/bad_inout_use_arg13.php.exp
File "bad_inout_use_arg13.php", line 7, characters 11-17:
Expected argument marked inout to be contained in a local or a value-typed container (e.g. vec, dict, keyset, array). To use inout here, assign to/from a temporary local variable. (Typing[4208])
File "bad_inout_use_arg13.php", line 6, characters 8-27:
This is an object of type Map<int, string>
